--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "vite": "^2.9.9"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Allysonfreitas210695/movies_lib.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Allysonfreitas210695/movies_lib/issues"
+  },
+  "homepage": "https://github.com/Allysonfreitas210695/movies_lib#readme",
+  "description": ""
 }
